# Lista_CCF110

./: .gitginore
lista_01/: CMakeLists.txt  exercicio1.c  exercicio2.c  exercicio3.c  exercicio4.c
lista_01/AnnaLuisa-4409/: exercicio1.c  exercicio10  exercicio10.c  exercicio11  exercicio11.c  exercicio2  exercicio2.c  exercicio3  exercicio3.c  exercicio4  exercicio4.c  exercicio5  exercicio5.c  exercicio6  exercicio6.c  exercicio7  exercicio7.c  exercicio8  exercicio8.c  exercicio9  exercicio9.c
lista_02/: CMakeLists.txt  exercicio1  exercicio1.c  exercicio10  exercicio10.c  exercicio11  exercicio11.c  exercicio12  exercicio12.c  exercicio13.c  exercicio2  exercicio2.c  exercicio3  exercicio3.c  exercicio4  exercicio4.c  exercicio5  exercicio5.c  exercicio6  exercicio6.c  exercicio7  exercicio7.c  exercicio8  exercicio8.c  exercicio9  exercicio9.c
lista_03/: CMakeLists.txt  exercicio1  exercicio1.c  exercicio10  exercicio10.c  exercicio11  exercicio11.c  exercicio12  exercicio12.c  exercicio13  exercicio13.c  exercicio14  exercicio14.c  exercicio16.c  exercicio17  exercicio17.c  exercicio18  exercicio18.c  exercicio19  exercicio2  exercicio2.c  exercicio3  exercicio3.c  exercicio4  exercicio4.c  exercicio5  exercicio5.c  exercicio6  exercicio6.c  exercicio7  exercicio7.c  exercicio8  exercicio8.c  exercicio9  exercicio9.c  exrcicio15.c  teste  teste.c
lista_04/: CMakeLists.txt  e.1.c  e.11  e.11.c  e.12.c  e.2  e.2.c  e.3  e.4.c  e.5  e.5.c  e.6  e.6.c  e.8  main.c
lista_05/: e1  e1.c  e2  e2.c  e3  e3.c  e4  e4.c  e5  e5.c  e6  e6.c  e7  e7.c  e8  e8.c  e9.c
lista_06/: e1  e1.c  e10  e10.c  e11.c  e2.c  e3  e3.c  e4  e4.c  e5  e5.c  e6  e6.c  e7  e7.c  e8.c  e9  e9.c
lista_07/: alunos.txt  caculadora.txt  e1.c  e3.c
lista_07/Exercício 3/: e3
lista_07/Exercício 4/: e4
lista_07/Exercício 5/: agenda.txt  e5.c
lista_07/lista_8_4409/Exercício 1/: e1
lista_07/lista_8_4409/Exercício 2/: e2  e2.c
lista_07/lista_8_4409/Exercício 3/: e3.c
lista_07/lista_8_4409/Exercício 4/: e4  e4.c  livros.txt
lista_4/: e.1  e.10  e.10.c  e.11.c  e.12  e.12.c  e.13  e.13.c  e.14  e.14.c  e.2  e.2.c  e.3.c  e.4  e.4.c  e.5.c  e.6.c  e.7  e.7.c  e.8.c  main.c
