cmake_minimum_required(VERSION 3.26)
project(lista_02 C)

set(CMAKE_C_STANDARD 11)

add_executable(lista_02 exercicio1.c)
add_executable(lista_02.2 exercicio2.c)
add_executable(lista_02.3 )
add_executable(lista_02.4 )
add_executable(lista_02.5 )
add_executable(lista_02.6 )
add_executable(lista_02.7 )

