cmake_minimum_required(VERSION 3.26)
project(lista_02 C)

set(CMAKE_C_STANDARD 11)

add_executable(lista_02 exercicio1.c
        exercicio7.c
        exercicio8.c)
add_executable(lista_02.2 exercicio2.c)
add_executable(lista_02.3 exercicio3.c)
add_executable(lista_02.4 exercicio4.c)
add_executable(lista_02.5
        exercicio5.c)
add_executable(lista_02.6 exercicio6.c)
add_executable(lista_02.7
        exercicio7.c)
add_executable(lista_02.8
        exercicio8.c)
add_executable(lista_02.9
        exercicio9.c)
add_executable(lista_02.10 exercicio10.c)
add_executable(lista_02.11 exercicio11.c)
add_executable(lista_02.12 exercicio12.c)
add_executable(lista_02.13 exercicio13.c)



