cmake_minimum_required(VERSION 3.26)
project(lista_03 C)

set(CMAKE_C_STANDARD 11)

add_executable(lista_03 exercicio1.c)
add_executable(lista_03.2 exercicio2.c)
add_executable(lista_03.3 exercicio3.c)
add_executable(lista_03.4 exercicio4.c)
add_executable(lista_03.5 exercicio5.c)
add_executable(lista_03.6 exercicio6.c)
add_executable(lista_03.7 exercicio7.c)
add_executable(lista_03.8 exercicio8.c)
add_executable(lista_03.9 exercicio9.c)
add_executable(lista_03.10 exercicio10.c)
add_executable(lista_03.11 exercicio11.c)
add_executable(lista_03.12 exercicio12.c)
add_executable(lista_03.13 exercicio13.c)
add_executable(lista_03.14 exercicio14.c)
add_executable(lista_03.15 exercicio15.c)
add_executable(lista_03.16 exercicio16.c)
add_executable(lista_03.17 exercicio17.c)
add_executable(lista_03.18 exercicio18.c)
add_executable(lista_03.19 exercicio19.c)
